--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,12 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+<!--    <color name="colorPrimary">#111</color>-->
+    <color name="colorPrimary">#FFF</color>
+    <color name="colorDark">#111</color>
+    <color name="colorAccent">#ea3732</color>
+    <color name="bg_row_background">#FF3B30</color>
+    <color name="item_name">#535353</color>
+    <color name="description">#a9a9a9</color>
 </resources>
